Fix random crashes on macOS

Also it should fix cursor getting stuck after switching to other apps using cmd+tab and returning to krita using mouse click.

BUG:434646